Fix tooltips being shown in unreadable colors

--- a/steam_acolyte/window.css
+++ b/steam_acolyte/window.css
@@ -1,7 +1,3 @@
-* {
-    color: #DDDDDD;
-}
-
 LoginDialog {
     background: qlineargradient(
         x1: 0, y1: 0,
@@ -41,6 +37,10 @@ UserWidget:hover:pressed {
         stop: 0 #586E76,
         stop: 1 #6A7E83
     );
+}
+
+QLabel {
+    color: #DDDDDD;
 }
 
 QLabel#PersonaName {
